# SysYCompiler

./: .gitignore  CMakeLists.txt  README.md  lexer.l  parser.y  test.sh
src/: main.cpp  oj.hpp  others.cpp
src/back/: eeyore_lexer.cpp  eeyore_lexer.hpp  eeyore_parser.cpp  eeyore_parser.hpp  gen_riscv.cpp  gen_riscv.hpp  gen_tigger.cpp  gen_tigger.hpp  lexer.cpp  liveanalyze.cpp  liveanalyze.hpp  liveseg.cpp  liveseg.hpp  parser.cpp  parser.hpp  register_alloc.cpp  register_alloc.hpp  tigger_lexer.hpp
src/define/: analysis.cpp  ast.hpp  codegen.cpp  eval.cpp  gen.cpp  ir.hpp  irgen.cpp  irtok.hpp  seg.cpp  token.hpp
src/front/: lexer.cpp  lexer.hpp  logger.cpp  logger.hpp  parser.cpp  parser.hpp
src/mid/: genIR.cpp  genIR.hpp  typeck.cpp  typeck.hpp  utils.hpp
src/utils/: logger.hpp  utils.hpp
